<resources>
    <string name="app_name">LinisApp</string>
    <string name="login_email_hint">Your email..</string>
    <string name="login_pass_hint">Password..</string>
    <string name="login_logo_hint">Logo Login Page</string>
    <string name="login_loginbtn_hint">Login to account</string>
    <string name="login_regbtn_hint">Need a new account?</string>
    <string name="login_loginbtn_text">Login to account</string>
    <string name="login_regbtn_text">Need a new account?</string>
    <string name="main_action_search">Search</string>
    <string name="main_action_settings_text">Settings</string>
    <string name="main_action_logout_text">Logout</string>
    <string name="reg_regbtn_text">Create a new account</string>
    <string name="reg_loginbtn_text" />
    <string name="reg_loginbtn2_text">Already have an account?</string>
    <string name="reg_pass_hint">Password..</string>
    <string name="reg_confirm_pass_hint">Confirm Password..</string>
    <string name="setting_image">Circle Image</string>
    <string name="setup_name_hint">Your name..</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="add_post_hint">Add Description..</string>
    <string name="add_post_btn_text">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_profile_text">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_reg_btn_text">Not yet registered?</string>
    <string name="first_login_text">Login</string>
    <string name="second_login_text">Login</string>
</resources>
