<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@mipmap/action_home"
        android:title="@string/bottom_home_text" />
    <item
        android:id="@+id/bottom_action_notification"
        android:checkable="false"
        android:enabled="false"
        android:icon="@mipmap/action_notification"
        android:title="@string/bottom_notification_text"
        android:visible="false" />
    <item
        android:id="@+id/bottom_action_profile"
        android:checkable="false"
        android:enabled="false"
        android:icon="@mipmap/action_profile"
        android:title="@string/bottom_profile_text"
        android:visible="false" />
</menu>